fix alignment, new font size, top align big slides

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -22,12 +22,12 @@
   .slide-content {
     position: relative;
   }
-  @include media-query($small-screen){
-    padding-right: 2rem;
-  }
-  @include media-query($small-phone){
-    padding-right: 0;
-  }
+  // @include media-query($small-screen){
+  //   padding-right: 2rem;
+  // }
+  // @include media-query($small-phone){
+  //   padding-right: 0;
+  // }
 }
 
 .slide-content{
@@ -236,6 +236,12 @@ p {
   }
   @include media-query($small-phone){
     padding-right: 0;
+  }
+}
+
+.joint-message{
+  @include media-query($small-screen) {
+    font-size: 13px;
   }
 }
 
